--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   </head>
 
   <body data-ng-app="demoApp">
-    <h1>{{greetings}}</h1>
+    <h1>{{greeting}}</h1>
     <input type="text" data-ng-model="greeting">
     <script src="./bundle.js"></script>
   </body>
