--- a/app/index.html
+++ b/app/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Stuff</title>
-    <link rel="stylesheet" type="text/css" href="app/css/index.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
   </head>
 
   <body data-ng-app="demoApp">
-    <h1>{{greeting}}</h1>
+    <h1 id="greeting">{{greeting}}</h1>
     <input type="text/javascript" src="app/js/entry.js" data-ng-model="greeting">
     <script src="./bundle.js"></script>
   </body>
