--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Slug and Rabbit dance off!</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/build/.css">
   </head>
 
   <body data-ng-app="myApp">
@@ -27,7 +27,6 @@
     </section>
 
     <script type="text/javascript" src="./bundle.js"></script>
-    <!-- <script type="text/javascript" src="app/js/entry.js"></script> -->
   </body>
 
 </html>
