--- a/app/index.html
+++ b/app/index.html
@@ -11,6 +11,7 @@
       <h1>Rabbit vs Slug</h1>
       <p>Can they share their greens?</p>
       <section data-ng-controller="SlugController as slugctrl" class="slug" data-ng-init="slugctrl.getAll()">
+
         <h2>Slugs</h2>
         <h3>Add a Slug:</h3>
         <form data-ng-submit="slugctrl.createSlug()">
@@ -22,7 +23,7 @@
 
         <ol>
           <li data-ng-repeat="slug in slugctrl.slug">
-            <p data-ng-if="!slug.editing">{{slug.name}} is a {{slug.variety}} and likes to eat: {{slug.food}}</p>
+            <p data-ng-if="!slug.editing">{{slug.name}} is a {{slug.variety}} and likes to eat {{slug.food}}</p>
             <form data-ng-if="!slug.editing" data-ng-submit="slugctrl.updateSlug(slug)">
               <label for="name">Name</label>
               <input type="text" name="name" data-ng-model="slug.name">
@@ -35,12 +36,14 @@
             </form>
 
             <button type="button" data-ng-click="slug.editing = !slug.editing">Edit</button>
-            <button type="button" data-ng-click="slugctrl.removeSlug(slug)">Delete</button>
+            <button type="button" data-ng-click="slugctrl.deleteSlug(slug)">Delete</button>
           </li>
         </ol>
       </section>
 
       <section data-ng-controller="RabbitController as rabbitctrl" class="rabbit" data-ng-init="rabbitctrl.getAll()">
+        <h2>Rabbits</h2>
+        <h3>Add a Rabbit:</h3>
         <form data-ng-submit="rabbitctrl.createRabbit()">
           <label>Name <input type="text" data-ng-model="rabbitctrl.newRabbit.name"></label>
           <label>Variety <input type="text" data-ng-model="rabbitctrl.newRabbit.variety"></label>
@@ -48,25 +51,25 @@
           <button type="submit">Create Rabbit</button>
         </form>
 
-        <ul>
+        <ol>
           <li data-ng-repeat="rabbit in rabbitctrl.rabbit">
-          {{rabbit.name}}, {{rabbit.variety}}, eats: {{rabbit.food}}
+          <p data-ng-if="!rabbit.editing">{{rabbit.name}} is a {{rabbit.variety}} and likes to eat {{rabbit.food}}</p>
 
-            <form data-ng-if="rabbit.editing" data-ng-submit="rabbitctrl.updateRabbit(rabbit)">
+            <form data-ng-if="!rabbit.editing" data-ng-submit="rabbitctrl.updateRabbit(rabbit)">
               <label for="name">Name</label>
               <input type="text" name="name" data-ng-model="rabbit.name">
-
               <label for="type">Variety</label>
-              <input type="text" name="type" data-ng-model="rabbits.variety">
-
+              <input type="text" name="type" data-ng-model="rabbit.variety">
               <label for="food">Favorite food</label>
               <input type="text" name="food" data-ng-model="rabbit.food">
-
               <button type="submit">Update Rabbit</button>
-              <button data-ng-click="rabbit.editing = !rabbit.editing">Update!</button>
+              <button data-ng-click="rabbitctrl.cancelRabbit(rabbit)">Cancel</button>
+              <button type="button" data-ng-click="rabbit.editing = !rabbit.editing">Edit</button>
+              <button type="button" data-ng-click="rabbitctrl.deleteRabbit(rabbit)">Delete</button>
+
             </form>
           </li>
-        </ul>
+        </ol>
 
       </section>
     </main>
